Finish up GUI.  Start attachment download service and dai

--- a/BulkAttachmentManagementPlugin/BulkAttachmentManagementPlugin/BulkAttachmentManagementPlugin.csproj
+++ b/BulkAttachmentManagementPlugin/BulkAttachmentManagementPlugin/BulkAttachmentManagementPlugin.csproj
@@ -119,6 +119,7 @@
       <DependentUpon>PluginControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CRMService.cs" />
     <Compile Include="Services\CSVExportService.cs" />
   </ItemGroup>
   <ItemGroup>
